# CAP

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX_PROMPT.md  Cargo.toml  LICENSE-APACHE  README.md  ROADMAP.md  next-steps.md
.github/workflows/: ci.yml  pages.yml
crates/cap-cli/: Cargo.toml
crates/cap-cli/src/: main.rs
crates/cap-cli/tests/: cli_tests.rs
crates/cap-core-sdk/: Cargo.toml
crates/cap-core-sdk/src/: lib.rs
crates/cap-format/: Cargo.toml
crates/cap-format/src/: error.rs  index.rs  keys.rs  lib.rs  manifest.rs  package.rs  trust.rs
crates/cap-format/tests/: integration.rs
crates/cap-runtime-desktop/: Cargo.toml
crates/cap-runtime-desktop/src/: lib.rs
docs/: index.html
examples/hello-cap/: Cap.toml  README.md
examples/hello-cap/core/: Cargo.toml  README.md  hello_cap_core.wasm
examples/hello-cap/core/src/: lib.rs
examples/hello-cap/ui/: app.js  index.html  wasm_glue.js
scripts/: demo.sh
spec/: CAP-1.0.md
