[package]
name = "cap-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CAP command-line tool: keys/build/inspect/verify/run"
repository = "https://example.invalid/cap"

[[bin]]
name = "cap"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
cap-format = { path = "../cap-format" }
cap-runtime-desktop = { path = "../cap-runtime-desktop" }
serde_json = "1.0"
hex = "0.4"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
