[package]
name = "cap-core-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Helpers for building CAP WebAssembly cores (stable ABI: cap_alloc/cap_dealloc/cap_invoke)"
repository = "https://example.invalid/cap"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
