[package]
name = "cap-format"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CAP (.cap) packaging format: manifest/index/types, signing, building and verifying"
repository = "https://example.invalid/cap"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ciborium = "0.2"
sha2 = "0.10"
hex = "0.4"
zstd = "0.13"
zip = "7.2"
thiserror = "1.0"
base64 = "0.22"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
rand = "0.8"
walkdir = "2.5"
